# ai-training

./: README.md
.github/workflows/: deploy.yml
MLmodel/: Neural_network_trainer.py  RLassistant.py  Reward.json  dqn_model.pt  gaming_addiction.csv  howtorun.txt  main.py  model.pt  predict.py  predictions.csv  requirements.txt  rl_test.py
backend/: main.py  neural_train.py  pyproject.toml  rl_train.py  train.py
website/: package-lock.json  package.json
website/src/app/: layout.tsx  page.tsx
website/src/app/neural-train/: page.tsx
website/src/app/rl-train/: page.tsx
website/src/components/: Classification-Report.tsx  Confusion-Matrix.tsx  Metric.tsx  Navbar.tsx  model-answer.tsx  selection.tsx
website/src/schema/: models1.ts
