[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pygame>=2.6.1",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
]

